--- a/Core/packages.config
+++ b/Core/packages.config
@@ -1,5 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Autofac" version="4.8.1" targetFramework="net461" />
+  <package id="Autofac.Configuration" version="4.1.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Configuration" version="1.0.2" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="1.0.2" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Primitives" version="1.0.1" targetFramework="net461" />
+  <package id="NUnit" version="3.10.1" targetFramework="net461" />
   <package id="Selenium.Firefox.WebDriver" version="0.21.0" targetFramework="net461" />
   <package id="Selenium.WebDriver" version="3.14.0" targetFramework="net461" />
+  <package id="System.Collections" version="4.0.11" targetFramework="net461" />
+  <package id="System.Diagnostics.Debug" version="4.0.11" targetFramework="net461" />
+  <package id="System.IO" version="4.1.0" targetFramework="net461" />
+  <package id="System.Linq" version="4.1.0" targetFramework="net461" />
+  <package id="System.Resources.ResourceManager" version="4.0.1" targetFramework="net461" />
+  <package id="System.Runtime" version="4.1.0" targetFramework="net461" />
+  <package id="System.Runtime.Extensions" version="4.1.0" targetFramework="net461" />
+  <package id="System.Runtime.InteropServices" version="4.1.0" targetFramework="net461" />
+  <package id="System.Threading" version="4.0.11" targetFramework="net461" />
 </packages>
