--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -76,6 +76,7 @@
     <Compile Include="IDriver.cs" />
     <Compile Include="IDriverSettings.cs" />
     <Compile Include="ISession.cs" />
+    <Compile Include="IWebPage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Session.cs" />
     <Compile Include="TestBase.cs" />
