--- a/Tests/packages.config
+++ b/Tests/packages.config
@@ -10,4 +10,5 @@
   <package id="NUnit.Runners" version="3.8.0" targetFramework="net461" />
   <package id="NUnit3TestAdapter" version="3.10.0" targetFramework="net461" />
   <package id="Selenium.WebDriver.ChromeDriver" version="2.41.0" targetFramework="net461" />
+  <package id="Selenium.WebDriver.GeckoDriver.Win64" version="0.21.0" targetFramework="net461" />
 </packages>
