--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project DefaultTargets="Build" ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="..\packages\NUnit.3.10.1\build\NUnit.props" Condition="Exists('..\packages\NUnit.3.10.1\build\NUnit.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -84,6 +84,10 @@
     <Compile Include="Session.cs" />
     <Compile Include="TestBase.cs" />
     <Compile Include="TestEnvironmentSource.cs" />
+    <Compile Include="Link.cs" />
+    <Compile Include="WebElementFactory.cs" />
+    <Compile Include="ICustomElement.cs" />
+    <Compile Include="ILink.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
